// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Primary 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="btn btn-secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots FeatureItem Normal 1`] = `
<li>
  <div
    className="flex w-1/3 mb-3 rounded shadow p-5"
  >
    <img
      alt="eye icon"
      className="mr-5 -mt-1 w-10 h-10"
      src={
        Object {
          "ReactComponent": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__esModule": true,
          "default": "eye.svg",
        }
      }
    />
    <p
      className="w-56 text-gray-700 text-sm"
    >
      Some text to describe one of the app features.
    </p>
  </div>
</li>
`;

exports[`Storyshots Features Normal 1`] = `
<div
  className="flex w-240 my-0 mx-auto py-40"
>
  <ul
    className="flex flex-wrap list-none justify-between"
  >
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Form Normal 1`] = `
<form
  className="w-1/3 p-8 mx-auto my-0"
  onSubmit={[Function]}
>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="firstname"
    >
      First name
    </label>
    <input
      className="text-input"
      id="firstname"
      name="firstname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="First name"
      type="text"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="lastname"
    >
      Last name
    </label>
    <input
      className="text-input"
      id="lastname"
      name="lastname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Last name"
      type="text"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="email"
    >
      E-mail Address
    </label>
    <input
      className="text-input"
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="E-mail Address"
      type="email"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="password"
    >
      Password
    </label>
    <input
      className="text-input"
      id="password"
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Try Me
  </button>
</form>
`;

exports[`Storyshots Form/FormInput Err 1`] = `
<div
  className="flex flex-col mb-4"
>
  <label
    className="text-red-600"
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input border-red-600"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  <span
    className="text-red-600"
  >
    This field is required.
  </span>
</div>
`;

exports[`Storyshots Form/FormInput Password 1`] = `
<div
  className="flex flex-col mb-4"
>
  <label
    className=""
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  
</div>
`;

exports[`Storyshots Form/FormInput Text 1`] = `
<div
  className="flex flex-col mb-4"
>
  <label
    className=""
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  
</div>
`;

exports[`Storyshots Header Normal 1`] = `
<header
  className="h-16 relative z-10"
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.25)",
    }
  }
>
  <div
    className="flex w-240 my-0 mx-auto h-full items-center justify-between"
  >
    <div
      className="mr-20 px-3 py-1 text-gray-400"
    >
      LOGO
    </div>
    <nav
      className="flex w-2/3"
    >
      <ul
        className="flex"
      >
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/films"
            onClick={[Function]}
          >
            Films
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/tv-shows"
            onClick={[Function]}
          >
            TV-shows
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/people"
            onClick={[Function]}
          >
            People
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/discussions"
            onClick={[Function]}
          >
            Discussions
          </a>
        </li>
      </ul>
      <ul
        className="flex"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Create Account
        </button>
        <button
          className="btn btn-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Log In
        </button>
      </ul>
    </nav>
  </div>
</header>
`;

exports[`Storyshots Hero Normal 1`] = `
<div
  className="flex justify-center content-center h-168 bg-center bg-no-repeat -mt-16"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(watchingtv.jpg)",
    }
  }
>
  <div
    className="flex w-240 my-0 mx-auto flex-col justify-center text-center"
  >
    <h1
      className="text-4xl font-bold leading-tight text-gray-200"
    >
      Save shows and movies you want to watch.
      <br />
      Track what you have watched.
      <br />
      Share with your friends what is worth watching.
    </h1>
    <button
      className="btn btn-primary flex justify-around w-48 mx-auto mt-10 tracking-wide text-xl"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Get Started
      <svg
        className="bg-white rounded-full p-1 self-center"
        title="arrow icon"
      >
        arrow.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots NavItem Normal 1`] = `
<li>
  <a
    className="px-3 py-1 text-gray-600"
    href="/default/"
    onClick={[Function]}
  >
    Default
  </a>
</li>
`;

exports[`Storyshots ResetPasswordLink Normal 1`] = `
<a
  className="text-xs"
  href="/reset-password"
  onClick={[Function]}
>
  Forgot my password
</a>
`;

exports[`Storyshots TopNav Logged In 1`] = `
<nav
  className="flex w-2/3"
>
  <ul
    className="flex"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/films"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/tv-shows"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/people"
        onClick={[Function]}
      >
        People
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/discussions"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
  </ul>
  <ul
    className="flex"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/profile"
        onClick={[Function]}
      >
        My Profile
      </a>
    </li>
    <li>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Log Out
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots TopNav Logged Out 1`] = `
<nav
  className="flex w-2/3"
>
  <ul
    className="flex"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/films"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/tv-shows"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/people"
        onClick={[Function]}
      >
        People
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/discussions"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
  </ul>
  <ul
    className="flex"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create Account
    </button>
    <button
      className="btn btn-secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Log In
    </button>
  </ul>
</nav>
`;
